(library
 (name melstd)
 (package melange)
 (flags :standard -open StdLabels -open MoreLabels)
 (libraries unix compiler-libs.common pp))

(rule
 (targets js_reserved_map.ml)
 (deps ./gen/keywords.list)
 (action
  (with-stdout-to
   %{targets}
   (run ./gen/build_reserved.exe %{deps} %{targets}))))

(rule
 (targets vec_int.ml)
 (deps vec.cppo.ml)
 (action
  (run cppo -D TYPE_INT %{env:CPPO_FLAGS=} %{deps} -o %{targets})))

(rule
 (targets vec.ml)
 (deps vec.cppo.ml)
 (action
  (run cppo -D TYPE_FUNCTOR %{env:CPPO_FLAGS=} %{deps} -o %{targets})))

