(include_subdirs unqualified)

(library
 (name napkin)
 (flags
  (:standard -w -9))
 (modules :standard \ res_cli)
 (libraries
  melange.ppx
  ocaml-migrate-parsetree
  compiler-libs.common
  reactjs_jsx_ppx_v3))

(executable
 (name res_cli)
 (public_name rescript_syntax)
 (package mel)
 (modules res_cli)
 (flags
  (-open Napkin))
 (libraries napkin))
