(include_subdirs unqualified)

(library
 (name napkin)
 (flags
  (:standard -w -9))
 (modules :standard \ res_cli)
 (libraries melange.ppx ocaml-migrate-parsetree compiler-libs.common))

(executable
 (name res_cli)
 (public_name rescript-syntax)
 (package rescript-syntax)
 (modules res_cli)
 (flags
  (-open Napkin))
 (libraries napkin))
