(library
 (modes melange)
 (name dom)
 (public_name melange.dom)
 (preprocess
  (pps melange.ppx -unsafe))
 (modules dom dom_storage)
 (melange.compile_flags
  -mel-no-check-div-by-zero
  -mel-cross-module-opt
  -unsafe
  -nopervasives
  -nostdlib))

(rule
 (deps node.pre.ml)
 (target node.ml)
 (action
  (progn
   (with-stdout-to
    %{target}
    (run awk -f %{dep:expand_module_aliases_node.awk} %{deps})))))

(library
 (modes melange)
 (name node)
 (public_name melange.node)
 (preprocess
  (pps melange.ppx -unsafe))
 (libraries melange.js)
 (modules
  node
  node_buffer
  node_child_process
  node_fs
  node_module
  node_path
  node_process
  node_process)
 (stdlib)
 (melange.compile_flags
  -mel-no-check-div-by-zero
  -mel-cross-module-opt
  -unsafe
  -open
  Melange_mini_stdlib))

