(library
 (name ounit_tests)
 (flags
  (:standard -w -9-50 -open Melange_compiler_libs))
 (wrapped false)
 (libraries ounit depends ext bsb bsb_helper core melange-compiler-libs))

(rule
 (targets ounit_hash_set_tests.ml)
 (deps ounit_hash_set_tests.cppo.ml)
 (action
  (run cppo -D TYPE_STRING %{deps} -o %{targets})))

(rule
 (targets ounit_ordered_hash_set_tests.ml)
 (deps ounit_ordered_hash_set_tests.cppo.ml)
 (action
  (run cppo -D TYPE_STRING %{deps} -o %{targets})))
