(library
 (name melange_mini_stdlib)
 (package melange)
 (modules melange_mini_stdlib)
 (preprocess
  (pps melange.ppx -unsafe))
 (modes melange)
 (melange.compile_flags -nostdlib -nopervasives))

(rule
 (deps js.pre.ml)
 (target js.ml)
 (action
  (progn
   (with-stdout-to
    %{target}
    (run awk -f %{dep:expand_module_aliases.awk} %{deps})))))

(rule
 (deps js.pre.mli)
 (target js.mli)
 (action
  (progn
   (with-stdout-to
    %{target}
    (run awk -f %{dep:expand_module_aliases.awk} %{deps})))))

(library
 (public_name melange.js)
 (name js)
 (modes melange)
 (modules :standard \ melange_mini_stdlib)
 (stdlib
  (internal_modules Caml* Curry))
 (preprocess
  (pps melange.ppx -unsafe))
 (libraries melange_mini_stdlib)
 (melange.compile_flags
  -open
  Melange_mini_stdlib
  -mel-no-check-div-by-zero
  -mel-cross-module-opt
  -unsafe))

(rule
 (deps caml_io.cppo.ml)
 (target caml_io.ml)
 (action
  (with-stdout-to
   %{target}
   (run cppo %{env:CPPO_FLAGS=} %{deps} -o %{target}))))

(rule
 (target js_typed_array.ml)
 (deps js_typed_array.cppo.ml)
 (action
  (run cppo %{deps} -o %{target})))

(rule
 (target caml_oo_curry.ml)
 (action
  (with-stdout-to
   %{target}
   (run ./gen/gen_caml_oo_curry.exe))))

(rule
 (target curry.ml)
 (action
  (with-stdout-to
   %{target}
   (run ./gen/gen_curry.exe))))
