(library
 (public_name melange.stdlib)
 (name stdlib)
 (modes melange)
 (wrapped false)
 (preprocess
  (action
   (run
    melc
    -as-pp
    -bs-no-check-div-by-zero
    -bs-cross-module-opt
    %{input-file})))
 (libraries melange.runtime melange.belt)
 (flags :standard -w -9-49 \ -keep-locs)
 (melange.compile_flags
  -no-keep-locs
  -bs-no-version-header
  -bs-no-check-div-by-zero
  -bs-cross-module-opt
  -bs-no-builtin-ppx
  -nopervasives
  -nostdlib))

;; The one that depends on everything. let's just call it `melange`

(subdir
 stdlib_modules
 (library
  (public_name melange)
  (name melange)
  (wrapped false)
  (modes melange)
  (preprocess
   (action
    (run
     melc
     -as-pp
     -bs-no-check-div-by-zero
     -bs-cross-module-opt
     %{input-file})))
  (libraries melange.runtime melange.belt melange.stdlib)
  (flags :standard -w -9-61 \ -keep-locs)
  (melange.compile_flags
   -no-keep-locs
   -bs-no-version-header
   -bs-no-check-div-by-zero
   -bs-cross-module-opt
   -bs-no-builtin-ppx
   -nolabels)))
