(copy_files ./stdlib_modules/*.ml{,i})

(library
 (public_name melange)
 (name stdlib)
 (modes melange)
 (preprocess
  (per_module
   ((action
     (progn
      (with-stdout-to
       %{input-file}.pp.mel
       (run
        melc
        -pp
        "awk -f %{dep:expand_module_aliases.awk}"
        -as-pp
        -bs-no-builtin-ppx
        %{input-file}))
      (ppx (melange.ppx) %{input-file}.pp.mel)))
    stdlib)
   ((action
     (progn
      (with-stdout-to
       %{input-file}.pp.mel
       (run melc -as-pp -bs-no-builtin-ppx %{input-file}))
      (ppx (melange.ppx) %{input-file}.pp.mel)))
    sys
    uchar
    unit
    weak
    arg
    array
    arrayLabels
    atomic
    bool
    buffer
    bytes
    bytesLabels
    callback
    camlinternalFormat
    camlinternalLazy
    camlinternalMod
    camlinternalOO
    char
    complex
    digest
    either
    ephemeron
    filename
    float
    format
    fun
    gc
    genlex
    hashtbl
    in_channel
    int
    int32
    int64
    lazy
    lexing
    list
    listLabels
    map
    marshal
    moreLabels
    obj
    oo
    option
    out_channel
    parsing
    pervasives
    printexc
    printf
    queue
    random
    result
    scanf
    seq
    set
    stack
    stdLabels
    stream
    string
    stringLabels)))
 (libraries melange.runtime melange.belt)
 (flags :standard -w -9-61 \ -keep-locs)
 (stdlib
  (modules_before_stdlib CamlinternalFormatBasics CamlinternalAtomic)
  (internal_modules Camlinternal*))
 (melange.compile_flags
  -no-keep-locs
  -bs-no-version-header
  -bs-no-check-div-by-zero
  -bs-cross-module-opt
  -nolabels))
