(library
 (name test_runner)
 (wrapped false)
 (modes melange)
 (modules mt)
 (preprocess
  (pps melange.ppx))
 (melange.compile_flags -bs-cross-module-opt)
 (libraries melange melange.node))

(library
 (name melange_runtime_tests)
 (modes melange)
 (libraries test_runner melange.dom melange.belt)
 (wrapped false)
 (preprocess
  (pps melange.ppx))
 (modules :standard \ mt)
 (melange.compile_flags -w -27-32+104 -bs-cross-module-opt))

(subdir
 re_or_res
 (library
  (name melange_tests_re_res)
  (modes melange)
  (libraries test_runner melange.dom melange.belt)
  (wrapped false)
  (preprocess
   (pps melange.ppx reason-react-ppx))
  (melange.compile_flags -w +104 -bs-cross-module-opt)))

(subdir
 es6_tests
 ;; same as above but no preprocessing with reason-react-ppx
 (library
  (name melange_runtime_es6_tests)
  (modes melange)
  (libraries test_runner)
  (preprocess
   (pps melange.ppx))
  (wrapped false)
  (melange.compile_flags -w +104 -bs-cross-module-opt)))

(ocamllex arith_lexer)

(ocamllex number_lexer)

(ocamllex simple_lexer_test)

(melange.emit
 (target dist)
 (alias melange-runtime-tests)
 (promote (until-clean))
 (modules)
 (module_systems
  (commonjs js))
 (libraries melange melange_runtime_tests melange_tests_re_res)
 (runtime_deps
  (glob_files *.js)))

(melange.emit
 (target dist-es6)
 (alias melange-runtime-tests)
 (promote (until-clean))
 (modules)
 (module_systems
  (es6 mjs))
 (libraries melange melange_runtime_es6_tests))
