(library
 (name test_runner)
 (wrapped false)
 (modes melange)
 (modules mt)
 (preprocess
  (pps melange.ppx))
 (melange.compile_flags --mel-cross-module-opt)
 (libraries melange melange.node))

(library
 (name melange_runtime_tests)
 (modes melange)
 (libraries test_runner melange.dom melange.belt)
 (wrapped false)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (modules :standard \ mt es6_export es6_import es6_module_test)
 (melange.compile_flags -w -27-32-35+104 --mel-cross-module-opt))

(include_subdirs unqualified)

;; same as above but no preprocessing with reason-react-ppx

(library
 (name melange_runtime_es6_tests)
 (modes melange)
 (libraries test_runner)
 (preprocess
  (pps melange.ppx))
 (wrapped false)
 (modules es6_export es6_import es6_module_test)
 (melange.compile_flags -w +104 --mel-cross-module-opt))

(ocamllex arith_lexer)

(ocamllex number_lexer)

(ocamllex simple_lexer_test)

(melange.emit
 (target dist)
 (alias melange-runtime-tests)
 (promote (until-clean))
 (modules)
 (module_systems
  (commonjs js))
 (libraries melange melange_runtime_tests)
 (compile_flags :standard --mel-cross-module-opt)
 (runtime_deps
  (glob_files *.js)))

(melange.emit
 (target dist-es6)
 (alias melange-runtime-tests)
 (promote (until-clean))
 (modules)
 (module_systems
  (es6 mjs))
 (libraries melange melange_runtime_es6_tests)
 (compile_flags :standard --mel-cross-module-opt))
