(library
  (public_name melange.ocaml-tree)
  (name tree_sitter_ocaml)
  (preprocess (pps ppx_deriving.show ppx_sexp_conv))
  (libraries atdgen-runtime tree-sitter.run)

  ; A copy of the C headers for the tree-sitter library is found locally.
  ; This is because it's important to use the right version of 'parser.h'.
  ;
  (foreign_stubs
    (language c)
    (names parser bindings)
    (flags -std=c99
           -fPIC
           -I .)
  )

  ; TREESITTER_LIBDIR can be set to its correct value using pkg-config:
  ;   pkg-config --libs-only-L tree-sitter | sed -e 's/^-L//'
  ;
  (c_library_flags (-L%{env:TREESITTER_LIBDIR=/usr/local/lib}
                    -lstdc++
                    -ltree-sitter)
  )
  (foreign_stubs
    (language cxx)
    (names scanner)
    (flags -fPIC
           -I .)
  )
)
