(library
 (modes melange)
 (public_name melange.bs-stdlib-mini)
 (name bs_stdlib_mini)
 (flags :standard \ -keep-locs)
 (preprocess
  (action
   (run
    melc
    -bs-no-check-div-by-zero
    -bs-cross-module-opt
    -unsafe
    --as-pp
    %{input-file})))
 (melange.compile_flags
  -no-keep-locs
  -bs-no-version-header
  -bs-no-check-div-by-zero
  -bs-cross-module-opt
  -unsafe
  -nopervasives
  -nostdlib
  -bs-no-builtin-ppx))
